<resources>
    <string name="app_name">LearnAt</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="learn_from_to_mentors">Learn from top mentors around the world.</string>
    <string name="get_started_with_learnat">Get started with LearnAt</string>
    <string name="welcome_to">Welcome to</string>
    <string name="indias_learning_platform">India\'s online learning platform.</string>
    <string name="get_started_to_explore_pandoras_box_of_knowledge">Get started to explore pandora\'s box of knowledge.</string>
    <string name="signin_signup">Sign Up</string>
    <string name="enter_your_mobile">Enter your mobile number to continue.</string>
    <string name="Continue">Continue</string>
    <string name="OtpSentTo">Enter the OTP Sent to:-</string>
    <string name="OTPVerification">OTP Verification</string>
    <string name="didntreceiveotp">Didn\'t receive OTP?</string>

    <string name="VerifyNContiue"><![CDATA[Verify & Continue]]></string>
    <string name="InvalidOTP">Invalid OTP. Retry</string>
    <string name="invalidPhoneNumber">Invalid phone number.</string>
    <string name="sending">Sending...</string>
    <string name="resendIn">Resend in:</string>
    <string name="unableToSendOTP">Unable to send OTP.</string>
    <string name="YouHaveReachedMaxLimit">You have maximum limit. Try again after 24 hrs.</string>
    <string name="MobileNumber">Mobile number</string>
    <string name="enterOtp">Enter full OTP!</string>
    <string name="resend"><u>Resend OTP</u></string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_me">Me</string>
    <string name="heyLearner">Hey!! Learner.</string>
    <string name="youAreJust3StepsAwayFromLearning">You are just 3 steps away from learning.</string>
    <string name="LetsSetupYourAccount">Let\'s setup your account.</string>
    <string name="LetsStart">Let\'s Begin</string>
    <string name="ChooseYourSubject">Choose your course / subject</string>
    <string name="EnterICodeToGetCredit"><![CDATA[Enter I-Code & get 500 Credit.]]></string>
    <string name="InstallationCode">I-Code</string>
    <string name="WhatDoWantToLearn">What do you want to learn?</string>
    <string name="selectCourseCategoryWhichSuitesYorNeed">Select a course category, you can also change it later.</string>
    <string name="enterICode">Enter I - Code &amp; Get</string>
    <string name="iCodeInfo">I-Code is one time app installation code. By entering I-Code you get credit in your wallet which can be used for purchasing courses.</string>
    <string name="CreditAwaitingForYou">Credit awaiting for you.</string>
    <string name="iCode">I - Code</string>
    <string name="Apply">Apply</string>
    <string name="enteriCode">Enter I - Code</string>
    <string name="iDontHaveIcode">I don\'t have I - Code</string>
    <string name="Congratulations">Congratulations!!</string>
    <string name="CreditedToYourWallet">Credited to your wallet!!</string>
    <string name="HaveAAccountSignIn">Have an account? <u>Easy Sign In</u></string>
    <string name="GeneralCompetition">General Competition</string>

    <string name="Upcoming">Upcoming</string>
    <string name="ContinueLearning">Continue learning...</string>
    <string name="seeall">See all</string>
    <string name="Popular">Popular</string>
    <string name="Subjects">Subjects</string>
    <string name="Mentors">Mentors</string>
    <string name="ExploreOtherCategories">Explore other categories</string>
    <string name="LiveClasses">⦿ Live Classes</string>
    <string name="Logout">Logout</string>
    <string name="Category">Category</string>
    <string name="Courses">Courses</string>
    <string name="selected_category">Selected Category</string>
    <string name="Change"><u>Change</u></string>
    <string name="Mobile">Mobile</string>
    <string name="EducationDetails">Education Details</string>
    <string name="Wallet">Wallet</string>
    <string name="Achievements">Achievements</string>
    <string name="MyCourses">My Courses</string>
    <string name="entrance_exam">Entrance Exams</string>
    <string name="competitive_exams">Competitive Exams</string>
    <string name="it_coding"><![CDATA[IT & Coding]]></string>
    <string name="science_school">Science School</string>
    <string name="commerce">Commerce</string>
    <string name="Trending">Trending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="About">About</string>
    <string name="Lectures">Lectures</string>
    <string name="Subscribe">Subscribe</string>
    <string name="demo_contect">We provide a best and Outstanding Live chat Support and Service to our Customers even with our lowest price. As our aim is to provide 100% Satisfaction. Unlike other websites, we do have a great support team available for our customers.</string>
    <string name="Language">Language</string>
    <string name="Syllabus">Syllabus</string>
    <string name="SubscriptionFee">Subscription fee</string>
    <string name="CreditUsed">Credit used</string>
    <string name="GrandTotal">Grand Total</string>
    <string name="Referral">Refferal Code</string>
    <string name="CheckOut">Checkout</string>
    <string name="GetSubscription">Get Subscription</string>
    <string name="Follow">➤ Follow</string>
    <string name="RecordedClass">Recorded Class</string>
    <string name="Months">months</string>
    <string name="rupee_sign">₹</string>
    <string name="pay">Pay</string>
    <string name="signInFailed">Sign In Failed</string>
    <string name="Certification">Certifications</string>
    <string name="Transactions">Transactions</string>
    <string name="SignOut">Sign Out</string>
    <string name="ThisPhoneNumberIsAlreadyLinkedWithAnotherAccount">This number is already linked with another account.</string>
    <string name="LoginWith">Login with</string>
    <string name="EnterNewNumber">Enter new number.</string>
    <string name="ThisAccountIsAlreadyLinkedWithAnotherAccount">This gmail account is already linked to a another account.</string>
    <string name="ChangeAccount">Change Account</string>
    <string name="SignInWith">Sign in with </string>
    <string name="SignInWithGoogle">Sign In With Google</string>
    <string name="title_activity_mentor_main">MentorMain</string>
    <string name="ContinueMentoring">Continue Mentoring</string>
    <string name="Subjects_Underline"><u>Subjects</u></string>
    <string name="Teaching_Underline"><u>Teaching Now</u></string>
    <string name="AllCourses_Underline"><u>All Courses</u></string>
    <string name="RequestUpdation">Request Updation</string>
    <string name="MentorPanel">Mentor Panel</string>
    <string name="AllCourses">All Courses</string>
    <string name="TeachinNow">Teaching Now</string>
    <string name="youHaveSubscribedTo">You have subscribed to</string>
    <string name="StartLearning">Start Learning ></string>
    <string name="TransactionUnsuccessful">Transaction Unsuccessful</string>
    <string name="oops">OOPS!!</string>
    <string name="NoWorries">No worries</string>
    <string name="tryAgain">Try Again</string>
</resources>